apps/api/tests/test-data/bad/kotlin/HardcodedSecretKotlin.kt
// Bad: Hardcoded secrets

// kotlin-security-001 & 002
const val API_KEY = "sk_live_secret123"
val password = "admin@123"
